# varanda

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  Trunk.toml  flake.nix  index.html  wrangler.toml
.github/workflows/: pages-deploy.yml
docs/: design.md  expansion.md
public/: industrial.css  ishou-tokens.css  manifest.webmanifest
src/: admin.rs  api.rs  auth.rs  hostname.rs  lib.rs  main.rs  model.rs  session.rs  view.rs
