[package]
name = "varanda"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/pleme-io/varanda"
authors = ["pleme-io <ops@pleme.io>"]
description = "Family-facing PWA for the saguão fleet"

[[bin]]
name = "varanda"
path = "src/main.rs"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"
gloo-utils = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location", "Document", "HtmlDocument", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "Storage", "RequestCredentials"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
log = "0.4"
wasm-logger = "0.2"

# Saguão integration — shared types with crachá. Feature-gate while the
# upstream API settles.
# cracha-core = { git = "https://github.com/pleme-io/cracha", default-features = false }

[lints.clippy]
pedantic = "warn"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
